// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The FootballNotificationsLambda stack matches the snapshot for CODE 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuScheduledLambda",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ErrorEventMetricFilter9872E3AE": {
      "Properties": {
        "FilterPattern": "Error",
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "footballLambdaAE03EC83",
              },
            ],
          ],
        },
        "MetricTransformations": [
          {
            "MetricName": "error",
            "MetricNamespace": "CODE/football-notifications",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "GoalEventMetricFilterAD6B9DEF": {
      "Properties": {
        "FilterPattern": "successfully sent",
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "footballLambdaAE03EC83",
              },
            ],
          ],
        },
        "MetricTransformations": [
          {
            "MetricName": "goal-success",
            "MetricNamespace": "CODE/football-notifications",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "footballLambdaAE03EC83": {
      "DependsOn": [
        "footballLambdaServiceRoleDefaultPolicy4B4F2D3A",
        "footballLambdaServiceRole7F4891E5",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile-notifications/CODE/football/football.jar",
        },
        "Description": "Send Goal Alert notifications",
        "Environment": {
          "Variables": {
            "APP": "football",
            "App": "football",
            "STACK": "mobile-notifications",
            "STAGE": "CODE",
            "Stack": "mobile-notifications",
            "Stage": "CODE",
          },
        },
        "FunctionName": "football-CODE",
        "Handler": "com.gu.mobile.notifications.football.Lambda::handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "footballLambdaServiceRole7F4891E5",
            "Arn",
          ],
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "App",
            "Value": "football",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "footballLambdaServiceRole7F4891E5": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "football",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "footballLambdaServiceRoleDefaultPolicy4B4F2D3A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/mobile-notifications/CODE/football/football.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile-notifications/football",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile-notifications/football/*",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/football/CODE/mobile-notifications",
                  ],
                ],
              },
            },
            {
              "Action": "events:PutEvents",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:events:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":event-bus/liveactivities-eventbus-CODE",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "footballLambdaServiceRoleDefaultPolicy4B4F2D3A",
        "Roles": [
          {
            "Ref": "footballLambdaServiceRole7F4891E5",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "footballLambdafootballLambdacron01F98ABE1": {
      "Properties": {
        "ScheduleExpression": "cron(* * * * ? *)",
        "State": "ENABLED",
        "Tags": [
          {
            "Key": "App",
            "Value": "football",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "footballLambdaAE03EC83",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "footballLambdafootballLambdacron0AllowEventRuleFootballNotificationsLambdaCODEfootballLambda61B450106E28F268": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "footballLambdaAE03EC83",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "footballLambdafootballLambdacron01F98ABE1",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;

exports[`The FootballNotificationsLambda stack matches the snapshot for PROD 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuScheduledLambda",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ErrorEventMetricFilter9872E3AE": {
      "Properties": {
        "FilterPattern": "Error",
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "footballLambdaAE03EC83",
              },
            ],
          ],
        },
        "MetricTransformations": [
          {
            "MetricName": "error",
            "MetricNamespace": "PROD/football-notifications",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "GoalEventMetricFilterAD6B9DEF": {
      "Properties": {
        "FilterPattern": "successfully sent",
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "footballLambdaAE03EC83",
              },
            ],
          ],
        },
        "MetricTransformations": [
          {
            "MetricName": "goal-success",
            "MetricNamespace": "PROD/football-notifications",
            "MetricValue": "1",
          },
        ],
      },
      "Type": "AWS::Logs::MetricFilter",
    },
    "footballLambdaAE03EC83": {
      "DependsOn": [
        "footballLambdaServiceRoleDefaultPolicy4B4F2D3A",
        "footballLambdaServiceRole7F4891E5",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile-notifications/PROD/football/football.jar",
        },
        "Description": "Send Goal Alert notifications",
        "Environment": {
          "Variables": {
            "APP": "football",
            "App": "football",
            "STACK": "mobile-notifications",
            "STAGE": "PROD",
            "Stack": "mobile-notifications",
            "Stage": "PROD",
          },
        },
        "FunctionName": "football-PROD",
        "Handler": "com.gu.mobile.notifications.football.Lambda::handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "footballLambdaServiceRole7F4891E5",
            "Arn",
          ],
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "App",
            "Value": "football",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "footballLambdaServiceRole7F4891E5": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "football",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "footballLambdaServiceRoleDefaultPolicy4B4F2D3A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/mobile-notifications/PROD/football/football.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile-notifications/football",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile-notifications/football/*",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/football/PROD/mobile-notifications",
                  ],
                ],
              },
            },
            {
              "Action": "events:PutEvents",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:events:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":event-bus/liveactivities-eventbus-PROD",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "footballLambdaServiceRoleDefaultPolicy4B4F2D3A",
        "Roles": [
          {
            "Ref": "footballLambdaServiceRole7F4891E5",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "footballLambdafootballLambdacron01F98ABE1": {
      "Properties": {
        "ScheduleExpression": "cron(* * * * ? *)",
        "State": "ENABLED",
        "Tags": [
          {
            "Key": "App",
            "Value": "football",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "footballLambdaAE03EC83",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "footballLambdafootballLambdacron0AllowEventRuleFootballNotificationsLambdaPRODfootballLambda8E9BAD03D7DD3077": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "footballLambdaAE03EC83",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "footballLambdafootballLambdacron01F98ABE1",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
